@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>no-herd</herd>
+<maintainer>
+  <email>chriswhite@gentoo.org</email>
+  <name>Chris White</name>
+  <description>Placeholder Maintainer</description>
+</maintainer>
+</pkgmetadata>
