@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/logsentry
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/logsentry/ChangeLog,v 1.18 2004/12/18 17:27:16 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/logsentry/ChangeLog,v 1.19 2004/12/31 04:41:32 chriswhite Exp $
+
+  31 Dec 2004; Chris White <chriswhite@gentoo.org> +metadata.xml:
+  Taking over as placeholder maintainer.  Fixed some ebuild stuff.
 
   18 Dec 2004; Simon Stelling <blubb@gentoo.org> logsentry-1.1.1.ebuild:
   was testing for over 2 years without bug reports, marking stable on amd64
